<resources>
    <string name="app_name">Consult Doctor</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="radio_male">Male</string>
    <string name="radio_female">Female</string>
    <string name="prompt_confirm_password">Confirm Password</string>
    <string name="button_signup">Register</string>
    <string name="button_login">Login</string>
    <string name="lab_report">Lab report</string>
    <string name="speciality">Speciality</string>
    <string name="qualifications">Qualifications</string>
    <string name="chat">Chat</string>
</resources>
