<?xml version="1.0" encoding="utf-8"?>


<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    android:focusable="true"
    android:background="@drawable/round_corner_shadow"
    android:foreground="?android:attr/selectableItemBackground"
    android:layout_margin="10dp"
    app:cardCornerRadius="@dimen/cardview_default_radius"
    app:cardElevation="@dimen/cardview_default_elevation"

    xmlns:app="http://schemas.android.com/apk/res-auto">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">


        <TextView
            android:id="@+id/team_view_holder_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:textStyle="bold"
            android:textSize="23sp"
            android:textColor="@android:color/black"
            android:textAlignment="center"
            android:text="Doctors' Name"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5dp">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/team_view_holder_pic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                app:civ_border_width="5dp"
                app:civ_border_color="@color/colorPrimaryDark"
                android:src="@drawable/userdefaultpic"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"


                android:orientation="vertical"
                android:gravity="center"
                android:padding="5dp">

                <TextView
                    android:id="@+id/team_view_holder_specs"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:textSize="17sp"
                    android:textColor="@android:color/black"
                    android:textAlignment="center"
                    android:text="@string/speciality"/>

                <TextView
                    android:id="@+id/team_view_holder_qual"
                    android:layout_width="match_parent"
                    android:textAlignment="center"
                    android:textSize="15sp"
                    android:textColor="@android:color/black"

                    android:layout_height="wrap_content"
                    android:text="@string/qualifications"/>

                <Button
                    android:id="@+id/team_view_holder_chat"
                    android:layout_width="100dp"
                    android:layout_gravity="end"
                    android:textAlignment="center"
                    android:textSize="13sp"
                    android:textColor="@android:color/black"
                    android:layout_height="wrap_content"
                    android:onClick="startChat"
                    android:text="@string/chat"/>


            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>